cert-manager/ingress-global.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx"},"name":"ingress-nginx","namespace":"ingress-nginx"},"spec":{"externalTrafficPolicy":"Local","ports":[{"name":"http","port":80,"targetPort":"http"},{"name":"https","port":443,"targetPort":"https"}],"selector":{"app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx"},"type":"LoadBalancer"}}
  creationTimestamp: "2019-12-17T14:24:21Z"
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  name: ingress-nginx
  namespace: ingress-nginx
  resourceVersion: "6116513"
  selfLink: /api/v1/namespaces/ingress-nginx/services/ingress-nginx
  uid: 2443b819-9b53-4dba-a0ef-da40c601970c
spec:
  clusterIP: 10.0.2.249
  externalTrafficPolicy: Local
  healthCheckNodePort: 31551
  ports:
  - name: http
    nodePort: 32043
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 31687
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 52.138.47.4
