cert-manager/min_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - anotherthree.ryanhyma.com
    secretName: hello-kubernetes-tls
  rules:
  - host: anotherthree.ryanhyma.com
    http:
      paths:
      - backend:
          serviceName: anotherthree-drupal-nginx
          servicePort: 80
